fixes legacy cad cutoff

--- a/app/src/css/components/ProductCustomizationStyle.scss
+++ b/app/src/css/components/ProductCustomizationStyle.scss
@@ -48,6 +48,7 @@
   position: relative;
   background-size: 120%;
   height: 360px;
+  background-position: center;
 
   @include xs {
     background-size: 100%;
@@ -60,7 +61,7 @@
   }
 
   @include md {
-    background-size: 80%;
-    height: 320px;
+    background-size: 75%;
+    height: 340px;
   }
 }
